[package]
name = "uaparser-rs"
authors = ["Ossama Zaid <w4rz4zi@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple user agent parser for rust"
keywords = ["browser", "user_agent", "uap", "user", "agent"]
homepage = "https://github.com/OssamaZ/uaparser-rs"
repository = "https://github.com/OssamaZ/uaparser-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
